[package]
name = "strict-num"
version = "0.2.0"
authors = ["Yevhenii Reizner <razrfalcon@gmail.com>"]
license = "MIT"
description = "A collection of bounded numeric types"
repository = "https://github.com/RazrFalcon/strict-num"
documentation = "https://docs.rs/strict-num/"
categories = ["mathematics", "no-std"]
readme = "README.md"
edition = "2018"

[dependencies]
float-cmp = { version = "0.9", optional = true, default-features = false, features = [
    "std",
] }
serde = { version = "1.0.163", optional = true, default-features = false, features = [
    "derive",
] }


[features]
default = ["approx-eq"]

# Implements `ApproxEq` and `ApproxEqUlps` traits for floating point numbers
# via the `float-cmp` crate.
# Disables `no_std`.
approx-eq = ["float-cmp"]
serde = ["dep:serde"]
